# log4cxx

./: .gitignore  CMakeLists.txt
CMake/: FindAPR.cmake  FindAPRutil.cmake
src/: CMakeLists.txt
src/examples/cpp/: CMakeLists.txt
src/main/cpp/: stringhelper.cpp
src/main/include/log4cxx/: log4cxx.h.in
src/main/include/log4cxx/helpers/: simpledateformat.h
src/test/cpp/: CMakeLists.txt
src/test/cpp/xml/: domtestcase.cpp
